Add get history api
