# api/swagger/v1/search.swagger.json
@@ -139,6 +139,51 @@
           "SearchService"
         ]
       }
+    },
+    "/api/v1/search-histories": {
+      "get": {
+        "operationId": "SearchService_GetSearchHistories",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1GetSearchHistoriesResponse"
+            }
+          },
+          "404": {
+            "description": "Returned when the resource does not exist.",
+            "schema": {
+              "type": "string",
+              "format": "string"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "offset",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          }
+        ],
+        "tags": [
+          "SearchService"
+        ]
+      }
     }
   },
   "definitions": {
@@ -242,6 +287,17 @@
         }
       }
     },
+    "v1GetSearchHistoriesResponse": {
+      "type": "object",
+      "properties": {
+        "histories": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/v1SearchHistory"
+          }
+        }
+      }
+    },
     "v1Position": {
       "type": "object",
       "properties": {
@@ -311,6 +367,25 @@
         "count": {
           "type": "integer",
           "format": "int32"
+        }
+      }
+    },
+    "v1SearchHistory": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "image": {
+          "type": "string",
+          "format": "byte"
+        },
+        "products": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/v1Product"
+          }
         }
       }
     },
